<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/topMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="27dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="27dp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/layoutImage"
            android:text="@string/pick_image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/txtFields"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/txtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPassword"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/licenseMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/txtFields">

            <TextView
                android:id="@+id/txtLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license" />

            <CheckBox
                android:id="@+id/licenseAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLicense"
                android:text="I Agree" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middleMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Gender:" />

            <RadioGroup
                android:id="@+id/sexid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/gender"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/other_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_group">

            <TextView
                android:id="@+id/txtcountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sexid"
                android:layout_marginTop="20dp"
                android:text="Country:"
                android:layout_centerVertical="true"/>

            <Spinner
                android:id="@+id/list_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txtcountry"
                android:entries="@array/country"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_country"
            android:layout_centerHorizontal="true"
            android:text="Register" />


    </RelativeLayout>

</RelativeLayout>

